增加一些API，删除多余文件。
